--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>shapez.io shape patch finder</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="styles.css">
 	<script src="lz.js"></script>
 	<script src="rng.js"></script>
 	<script src="save.js"></script>
@@ -39,7 +39,7 @@
 		<a href="https://github.com/mekb-turtle/shapez.io-finder/issues" target="_blank">Report bugs here</a>.<br/>
 	</p>
 	<script src="index.js"></script>
-	<img src="/image/red.png" width="0" height="0" style="hh"/><img src="/image/green.png" width="0" height="0" style="hh"/><img src="/image/blue.png" width="0" height="0" style="hh"/><img src="/image/R.png" width="0" height="0" style="hh"/><img src="/image/C.png" width="0" height="0" style="hh"/><img src="/image/W.png" width="0" height="0" style="hh"/><img src="/image/S.png" width="0" height="0" style="hh"/>
+	<img src="image/red.png" width="0" height="0" style="hh"/><img src="image/green.png" width="0" height="0" style="hh"/><img src="image/blue.png" width="0" height="0" style="hh"/><img src="image/R.png" width="0" height="0" style="hh"/><img src="image/C.png" width="0" height="0" style="hh"/><img src="image/W.png" width="0" height="0" style="hh"/><img src="image/S.png" width="0" height="0" style="hh"/>
 </body>
 </html>
 
