this code is becoming a mess...

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		</div>
 	</div>
 	<p class="red" id="errortext"></p>
+	<p id="title" class="h"></p>
 	<table class="h" id="table"></table>
+	<p id="limit" class="h yy"></p>
 	<p id="help" class="h">
 		Type red, green, or blue to search for that color.<br/>
 		Type a shape code such as RRWW or RuRuWuWu to search for that shape.<br/>
