--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>shapez.io shape patch finder</title>
+	<title>shapez shape patch finder</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
 	<script src="shapez.js"></script>
 </head>
 <body>
-	<h2>shapez.io shape patch finder</h2>
+	<h2>shapez shape patch finder</h2>
 	<noscript><p>Please enable Javascript and reload the page</p></noscript>
 	<div class="c h" id="main">
 		<form action="#" id="form">
@@ -32,13 +32,13 @@
 		Type a shape code such as RRWW or RuRuWuWu to search for that shape.<br/>
 		Then upload your save data or manually type your game's map seed,
 		and press search to search for it.<br/>
-		To get your save data launch shapez.io, click on your save file, and click the 
+		To get your save data launch shapez, click on your save file, and click the 
 		&quot;download&quot; icon to export it.<br/>
-		You can also find it in <code>~/.local/share/shapez.io/saves</code> (Linux) or 
-		<code>%APPDATA%\shapez.io\saves</code> (Windows)<br/>
+		You can also find it in <code>~/.local/share/shapez/saves</code> (Linux) or 
+		<code>%APPDATA%\shapez\saves</code> (Windows)<br/>
 		Hint: You can press F4 twice to see the coordinates in the bottom right.<br/>
 		No data is sent to servers, the script is done locally.<br/>
-		<a href="https://github.com/mekb-turtle/shapez.io-finder/issues" target="_blank">Report bugs here</a>.<br/>
+		<a href="https://github.com/mekb-turtle/shapez-finder/issues" target="_blank">Report bugs here</a>.<br/>
 	</p>
 	<script src="index.js"></script>
 </body>
